--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,18 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="GameOfLife.MainWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Crystal.MainWindow"
         Title="Crystal Simulator" Height="718" Width="1300" Icon="Images/SnowFlake.png" ResizeMode="CanMinimize" OpacityMask="#FF565656" FontWeight="Normal" WindowStyle="SingleBorderWindow" Foreground="#FF565656" BorderBrush="#FF565656" Background="#FF565656" WindowStartupLocation="CenterScreen">
 
     <Grid Background="#FF232323" Height="745">
         <Label Content="Crystal Simulator" x:Name="label1" Margin="124,45,0,0" FontSize="29" FontFamily="Consolas" Foreground="White" BorderBrush="#FF262626" FontWeight="Bold" HorizontalAlignment="Left" Width="283" Height="45" VerticalAlignment="Top" Background="#00000000"/>
         <Grid HorizontalAlignment="Left" Height="100" Margin="80,106,0,0" VerticalAlignment="Top" Width="320">
-            <TextBox Margin="112,35,0,0" x:Name="Radius" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" />
-            <Button Content="Load grid" Margin="176,16,0,0" x:Name="LoadGrid" Click="LoadGrid_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" Grid.ColumnSpan="2" />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="49*"/>
+                <ColumnDefinition Width="58*"/>
+            </Grid.ColumnDefinitions>
+            <TextBox Margin="112,35,0,0" x:Name="Radius" TextAlignment="Center" BorderBrush="White" TabIndex="0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="36" Background="#00000000" Foreground="White" FontFamily="Consolas" Grid.ColumnSpan="2" />
+            <Button Content="Load grid" Margin="29.5,16,0,0" x:Name="LoadGrid" Click="LoadGrid_Click" FontFamily="Consolas" Cursor="Arrow" Foreground="White" BorderBrush="White" Background="#00DDDDDD" TabIndex="2" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="126" FontWeight="Bold" Grid.Column="1" />
             <Label Content="Radius" Height="28" HorizontalAlignment="Left" Margin="52,33,0,0" x:Name="label2" VerticalAlignment="Top" FontFamily="Consolas" Foreground="White" FontWeight="Bold" />
-            <Button Content="Load simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="176,50,0,0" x:Name="loadSimualtion" VerticalAlignment="Top" Width="126" Click="loadSimualtion_Click" Background="#00DDDDDD" BorderBrush="White" TabIndex="3" Foreground="White" FontWeight="Bold" Grid.ColumnSpan="2" />
-            <Label Content="WRONG INPUTS" FontFamily="Consolas" Margin="52,-16,41,0" x:Name="WIRadius" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Center" Width="227" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" />
-            <Label Content="The file could not be uploaded" FontFamily="Consolas" Margin="52,-16,41,0" x:Name="WrongFile" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Center" Width="227" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
+            <Button Content="Load simulation" FontFamily="Consolas" Height="27" HorizontalAlignment="Left" Margin="29.5,50,0,0" x:Name="loadSimualtion" VerticalAlignment="Top" Width="126" Click="loadSimualtion_Click" Background="#00DDDDDD" BorderBrush="White" TabIndex="3" Foreground="White" FontWeight="Bold" Grid.Column="1" />
+            <Label Content="WRONG INPUTS" FontFamily="Consolas" Margin="70,-16,23,0" x:Name="WIRadius" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Center" Width="227" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" />
+            <Label Content="Selected file could not be loaded" FontFamily="Consolas" Margin="70,-16,23,0" x:Name="WrongFile" Foreground="Red" FontWeight="Bold" Height="25" VerticalAlignment="Top" HorizontalAlignment="Center" Width="227" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
         </Grid>
         <Grid Name="SimControls" HorizontalAlignment="Left" Height="433" Margin="11,213,0,0" VerticalAlignment="Top" Width="507">
             <Slider Height="23" HorizontalAlignment="Left" Margin="186,263,0,0" x:Name="speedSlider" VerticalAlignment="Top" Width="140" ValueChanged="speedSlider_ValueChanged" Foreground="Red" Background="#00000000" BorderBrush="Red" TabIndex="6" />
